--- a/style/common.less
+++ b/style/common.less
@@ -82,9 +82,10 @@ body {
 		font-size: 1.4em;
 		border-color: #FF6332;
 		background-color: #FF6332;
-		box-shadow: 0 0.2em 0 0 #D0481D;
+		box-shadow: 0 6px 0 0 #D0481D;
 		border-width: 0.15em;
 		padding: 0.4em 1.4em;
+		position: relative;
 		font-weight: normal;
 		text-transform: none;
 		i {
@@ -94,10 +95,13 @@ body {
 		}
 
 		&:hover {
-			color: #FF6332;
-			border-color: #fff;
-			background-color: #fff;
-			box-shadow: 0 0.2em 0 0 #fff;
+			box-shadow: 0 4px 0 0 #D0481D;
+			top: 2px;
+		}
+
+		&:active {
+			box-shadow: 0 0 0 0 #D0481D;
+			top: 6px;
 		}
 	}
 	&.btnBlack {
