--- a/style/guide.less
+++ b/style/guide.less
@@ -227,10 +227,10 @@
 			margin: 1em;
 			border-radius: 2em;
 			transition: left 0.4s;
-			[data-step="2"]&  {
+			[data-step="2"]& {
 				left: 12.1em;
 			}
-			[data-step="3"]&  {
+			[data-step="3"]& {
 				left: 24.3em;
 			}
 		}
@@ -298,7 +298,7 @@
 			font-size: 0.9em;
 			text-transform: uppercase;
 			text-decoration: none;
-			color: #43616F;
+			color: #43616f;
 			i {
 				color: #fff;
 				padding-right: 0.3em;
@@ -328,10 +328,9 @@
 		position: absolute;
 		left: 0;
 		top: 0;
-		align-items: center;
 		margin: 4em 0 0;
 		transform: translateX(-5%);
-		
+
 		figure {
 			min-width: 68%;
 			margin: 0;
@@ -347,43 +346,48 @@
 		}
 
 		.stepInfo {
+			margin-top: 2em;
 			text-align: left;
-			min-width: 32%;
-			ul {
-				list-style: none;
-				margin: 0;
-				padding: 0;
-			}
-			li {
-				position: relative;
-				padding-left: 5em;
-				&:before {
-					font-family: 'icomoon' !important;
-					font-size: 3em;
-					content: "\e901";
-					color: #3D6477;
-					position: absolute;
-					left: 0;
-					top: 0;
-				}
-				&:not(:last-child) {
-					margin-bottom: 2em;
-				}
+			min-width: 40%;
+			font-size: 1.15em;
+			padding-left: 1em;
+
+			i {
+				color: @color2;
+				width: 2.5em;
+				display: flex;
+				height: 2.5em;
+				border-radius: 50%;
+				background: @color1;
+				align-items: center;
+				font-style: normal;
+				justify-content: center;
+				font-family: "agb";
+				font-size: 1.1em;
 			}
 
-			h4 {
-				color: #fff;
-				font-size: 1.2em;
-				line-height: 1.2;
-				font-weight: bold;
-				margin: 0;
+			h5 {
+				color: @color1;
+				font-size: 1.5em;
+				font-weight: normal;
+				line-height: 1.3;
+				margin: 1em 0;
+
+				&:after {
+					content: "";
+					display: block;
+					height: 0.15em;
+					width: 50%;
+					background-color: #0d3e55;
+					margin: 0.7em 0 0;
+				}
 			}
 
 			p {
-				color: #3183a9;
-				font-size: 1em;
-				line-height: 1.2;
-				margin: 0;
+				color: #6D9AAF;
+				opacity: 0.5;
+				font-size: 0.9em;
+				padding-right: 20%;
 			}
 		}
 	}
@@ -391,12 +395,19 @@
 section.sectionReady {
 	position: relative;
 	&.play {
-		.contentWrapper {opacity: 1;}
-		span.circle .donut {stroke-dashoffset: 0;}
+		.contentWrapper {
+			opacity: 1;
+		}
+		span.circle {
+			animation: fadeout 1s 1.9s forwards;
+			.donut {
+				stroke-dashoffset: 0;
+			}
+		} 
 	}
 	span.circle {
 		background: conic-gradient(#093042 100%, #3bda82 100%);
-		width: 90vh;		
+		width: 90vh;
 		border-radius: 50%;
 		position: absolute;
 		left: 50%;
@@ -408,7 +419,7 @@ section.sectionReady {
 		}
 		.donut {
 			stroke-dashoffset: -1455;
-			transition:  stroke-dashoffset 1s 0.5s;
+			transition: stroke-dashoffset 1s 0.5s;
 		}
 	}
 
@@ -424,7 +435,7 @@ section.sectionReady {
 		text-align: center;
 		overflow: hidden;
 		opacity: 0;
-		transition: opacity 1s 1s;
+		transition: opacity 1s 1.3s;
 	}
 
 	h3 {
@@ -453,7 +464,7 @@ section.sectionReady {
 	li {
 		padding: 0 4em;
 		i[class*="icon-"] {
-			color: #7AC6FB;
+			color: #7ac6fb;
 			font-size: 2em;
 			border: 2px solid;
 			border-radius: 50%;
@@ -466,7 +477,7 @@ section.sectionReady {
 		}
 	}
 	p {
-		color: #3183A9;
+		color: #3183a9;
 		line-height: 1.2;
 		margin: 0;
 	}
@@ -486,7 +497,14 @@ section.sectionReady {
 		}
 	}
 }
-
+@keyframes fadeout {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
 // .sectionPreview {
 // 	i.circle {
 // 		background-color: @color2;
