--- a/style/setup.less
+++ b/style/setup.less
@@ -1,128 +1,247 @@
-
-
-.setupWrapper {
+.setupPage {
 	// background: linear-gradient(to bottom, #28a08c 0%,#28a08c 50%,#fafafa 50%,#fafafa 100%);
 	min-height: 100vh;
-
-	.setupBox {
-		min-height: 100vh;
-	}
-
-	.cntArea {
-		max-width: 930px;
-		padding: 0 20px;
-		position: relative;
-		width: 100vw;
-		margin: 0 auto;
-	}
-
-	.setupTabs {
-		display: flex;
-		font-family: "agb";
-		font-size: 1.2em;
-
-		a {
-			text-decoration: none;
-			flex-grow: 1;
-			flex-shrink: 0;
-			color: rgba(9, 48, 66, 0.3);
-			text-transform: uppercase;
+	header {
+		.grad {
+			background: linear-gradient(135deg, #1da9b1 0%, #27a57e 100%);
+			padding: 10px 30px;
 			position: relative;
-
-			&.active {
-				color: #abdb66;
+			z-index: 1;
+		}
+		a.logo {
+			display: inline-block;
+		}
+		.skipSteps {
+			background-color: #fff3f3;
+			padding: 5px;
+			text-align: center;
+			p {
+				display: inline-block;
+				color: #858585;
+				font-size: 12px;
+				margin: 1em 0;
 			}
-
-			&:not(:first-child) {
-				padding-left: 2em;
-
+			a {
+				color: #3bab6b;
+				font-size: 11px;
+				padding: 3px 10px;
+				border-width: 1px;
+				margin: 0 10px;
+				text-transform: none;
+				font-weight: normal;
+			}
+		}
+		.head {
+			background-color: #fff;
+			box-shadow: 0 2px 11px rgba(0, 0, 0, 0.16);
+			position: relative;
+			padding: 15px 10px;
+			> div:only-child {
+				max-width: 1150px;
+				margin: auto;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+			}
+			h2 {
+				color: #838383;
+				font-size: 1.8em;
+				font-weight: 500;
+			}
+			.paginate {
+				list-style: none;
+				margin: 0;
+				padding: 0;
+				display: flex;
+				position: relative;
 				&:before {
-					font-family: 'icomoon';
+					content: '';
+					height: 1px;
+					background-color: #979797;
+					width: 100%;
 					position: absolute;
-					left: -0.5em;
-					line-height: 1.5;
-					top: 0;
-					color: rgba(9, 48, 66, 0.8);
-					content: "\e905";
+					left: 0;
+					top: 50%;
+				}
+				li {
+					width: 1.7em;
+					height: 1.7em;
+					position: relative;
+					z-index: 1;
+					border-radius: 50%;
+					color: #979797;
+					background: #fff;
+					text-align: center;
+					line-height: 1.8;
+					border: 1px solid #979797;
+					font-size: 1em;
+					outline: 5px solid #fff;
+					&.current {
+						background-color: #333333;
+						border-color: #333333;
+						color: #fff;
+					}
+					&.completed {
+						background-color: #e4fff0;
+						border-color: #17a66d;
+						color: #17a66d;
+					}
+					&:not(:first-child) {
+						margin-left: 50px;
+					}
 				}
 			}
 		}
 	}
-
-	.setupHead {
-		background-color: rgba(255, 255, 255, 0.2);
-		padding: 1em 2em;
-		color: #fff;
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		font-size: 0.7em;
-		margin-top: 3em;
-		min-height: 5.355em;
-
-		&:empty {
-			opacity: 0;
+}
+.setupContainer {
+	width: 100%;
+	max-width: 980px;
+	border: 1px solid #cecece;
+	border-radius: 5px;
+	margin: 50px auto;
+	.card {
+		padding: 0 50px;
+		border: none;
+		border: 1px solid transparent;
+		border-radius: 5px;
+		transition: border-color 0.5s;
+		&.active {
+			border-color: #000;
+			.card-header {
+				font-size: 25px;
+				border-bottom-color: transparent !important;
+				&:after {
+					opacity: 0;
+				}
+			}
 		}
-
+	}
+	.card-header {
+		cursor: pointer;
+		background: transparent;
+		font-size: 20px;
+		padding: 30px 0;
+		color: rgba(0, 0, 0, 1);
+		position: relative;
+		transition: font-size 0.4s, border-color 0.5s;
+		&:after {
+			content: '';
+			width: 20px;
+			height: 20px;
+			border-right: 1px solid;
+			border-bottom: 1px solid;
+			transform: translateY(-50%) rotate(-45deg);
+			position: absolute;
+			margin: 0 0.5em;
+			right: 0;
+			top: 50%;
+		}
+		&.disabled {
+			opacity: 0.5;
+			pointer-events: none;
+		}
+	}
+	.card:not(:last-child) {
+		.card-header {
+			border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+		}
+	}
+	.setupSteps {
+		max-width: 500px;
+		margin: auto;
+	}
+	.stepHead {
+		position: relative;
+		margin-bottom: 20px;
+		h3 {
+			color: #000;
+			font-size: 17px;
+			font-weight: 600;
+			margin-bottom: 0.5em;
+		}
 		p {
-			margin: 0;
+			color: #999999;
+			font-size: 14px;
+			margin-bottom: 0;
 		}
-
-		.btn {
-			font-size: 0.9em;
-			font-family: 'Heebo';
-			font-weight: normal;
+		.switch {
+			position: absolute;
+			right: 0;
+			top: 50%;
+			transform: translateY(-50%);
 		}
 	}
-
-	.setupHeader {
-		background-color: #28a08c;
-		min-height: 50vh;
+	.stepBody {
+		border: 1px solid #c6c6c6;
+		border-radius: 5px;
+		padding: 50px;
+		h6 {
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+	}
+	.stepFoot {
+		padding: 15px;
+	}
+	.resetSetting {
+		color: #696969;
+		font-size: 12px;
 		display: flex;
-		flex-direction: column;
 		align-items: center;
-		justify-content: flex-end;
-
-		h2 {
-			color: #fff;
-			font-family: "agb";
-			font-size: 3.5em;
-			line-height: 1;
-			font-weight: normal;
+		i {
+			margin-right: 0.4rem;
+			font-size: 2.2em;
 		}
 	}
-
-	.setupContent {
-		&.pullUp {
-			margin-top: -3.7em;
+	.btnLoyaltyPoints {
+		button {
+			font-size: 0.9rem;
+			padding: 0.2rem 1rem;
 		}
 	}
-
-	.contentBox {
-		img {
-			width: 100%;
-			vertical-align: middle;
+}
+.switch {
+	font-size: 14px;
+	display: inline-block;
+	height: 1.7em;
+	position: relative;
+	width: 3.3em;
+	margin: 0;
+	input {
+		display: none;
+	}
+	i {
+		background-color: #ccc;
+		bottom: 0;
+		cursor: pointer;
+		left: 0;
+		position: absolute;
+		right: 0;
+		top: 0;
+		transition: .4s;
+		border-radius: 34px;
+		border: 1px solid #ccc;
+		&:before {
+			background-color: #fff;
+			top: 0;
+			left: 0;
+			content: "";
+			height: 1.3em;
+			position: absolute;
+			transition: .4s;
+			margin: 0.15em;
+			width: 1.3em;
+			border-radius: 50%;
 		}
 	}
-
-	.navBox {
-		text-align: right;
-		padding: 2em 0;
-
-		a.btn {
-			font-size: 0.7em;
-			border-radius: 0.5em;
-			color: #fff;
-			text-transform: none;
-			font-weight: normal;
-			display: inline-block;
-			padding: 0.5em 3em;
-		}
-	}
-
-	.setupBox.step-live {
-		.setupHeader {
-			background-color: @color2;
+	input:checked + i {
+		background-color: #fff;
+		color: #fff;
+		content: "oui";
+		&:before {
+			transform: translateX(1.6em);
+			background-color: green;
 		}
 	}
 }
