--- a/style/overwrite-bootstrap.css
+++ b/style/overwrite-bootstrap.css
@@ -19,16 +19,36 @@
 }
 .form-group .input-group-prepend {
     color: #42A8E7;
-    font-size: 1rem;
+    font-size: 0.8rem;
     position: absolute;
-    margin: 0.4rem;
+    margin: 0.6rem 0.3rem;
     width: 1.2rem;
     align-items: center;
     justify-content: center;
 }
 .form-group .input-group-prepend ~ input {
-    padding: .375rem 2rem;
+    padding: .375rem 0.5rem 0.375rem 1.6rem;
 }
 .form-group input {
     padding: .375rem 1.25rem;
+}
+.alert {
+    font-size: 0.8rem;
+    padding: 0.3rem 0.7rem;
+    border-radius: 2rem;
+    line-height: 1.5;
+}
+.alert .badge {
+    font-size: 95%;
+    margin-right: 5px;
+}
+.alert-warning {
+    background-color: #FFF6E4;
+    color: #595959;
+}
+.scale-8 {
+    transform: scale(0.8);
+}
+.to-00 {
+    transform-origin: 0 0;
 }
