--- a/style/style.css
+++ b/style/style.css
@@ -1009,6 +1009,7 @@ section.sectionReady .button {
 .setupContainer .stepBody h6 {
   font-weight: bold;
   margin-bottom: 10px;
+  font-size: 0.85rem;
 }
 .setupContainer .stepFoot {
   padding: 15px;
