--- a/style/setup.less
+++ b/style/setup.less
@@ -93,13 +93,50 @@
 			}
 		}
 	}
+	footer.saveBar {
+		background-color: rgba(0, 0, 0, 0.555);
+		padding: 20px;
+		button {
+			border-radius: 10px;
+			display: flex;
+			align-items: center;
+			padding: 0.75rem;
+			i {
+				background-color: #009688;
+				border-radius: 50%;
+				color: #fff;
+				display: inline-block;
+				margin-left: 15px;
+			}
+		}
+	}
 }
 .setupContainer {
 	width: 100%;
-	max-width: 980px;
+	max-width: 960px;
 	border: 1px solid #cecece;
 	border-radius: 5px;
 	margin: 50px auto;
+	.setupSwiper {
+		max-width: 500px;
+		margin: auto;
+	}
+	.setupSwiper-navigator {
+		padding: 25px 0;
+		border-top: 1px solid #ccc;
+		text-align: center;
+		> div {
+			max-width: 500px;
+			margin: auto;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+
+		}
+		.setupSwiper-pagination {
+			position: static;
+		}
+	}
 	.card {
 		padding: 0 50px;
 		border: none;
