--- a/style/style.css
+++ b/style/style.css
@@ -920,12 +920,58 @@ section.sectionReady .button {
 .setupPage header .head .paginate li:not(:first-child) {
   margin-left: 50px;
 }
+.setupPage footer.saveBar {
+  background-color: rgba(0, 0, 0, 0.555);
+  padding: 20px;
+}
+.setupPage footer.saveBar button {
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.75rem;
+}
+.setupPage footer.saveBar button i {
+  background-color: #009688;
+  border-radius: 50%;
+  color: #fff;
+  display: inline-block;
+  margin-left: 15px;
+}
 .setupContainer {
   width: 100%;
-  max-width: 980px;
+  max-width: 960px;
   border: 1px solid #cecece;
   border-radius: 5px;
   margin: 50px auto;
+}
+.setupContainer .setupSwiper {
+  max-width: 500px;
+  margin: auto;
+}
+.setupContainer .setupSwiper-navigator {
+  padding: 25px 0;
+  border-top: 1px solid #ccc;
+  text-align: center;
+}
+.setupContainer .setupSwiper-navigator > div {
+  max-width: 500px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.setupContainer .setupSwiper-navigator .setupSwiper-pagination {
+  position: static;
 }
 .setupContainer .card {
   padding: 0 50px;
