--- a/style/style.css
+++ b/style/style.css
@@ -1008,21 +1008,37 @@ section.sectionReady .button {
   border-color: #000;
 }
 .setupContainer .card.active .card-header {
-  font-size: 25px;
   border-bottom-color: transparent !important;
 }
+.setupContainer .card.active .card-header h3 {
+  font-size: 25px;
+}
 .setupContainer .card.active .card-header:after {
-  opacity: 0;
+  -webkit-transform: translateY(-90%) rotate(45deg);
+          transform: translateY(-90%) rotate(45deg);
 }
 .setupContainer .card-header {
   cursor: pointer;
   background: transparent;
-  font-size: 20px;
-  padding: 30px 0;
-  color: #000000;
+  padding: 30px 60px 30px 0;
   position: relative;
-  -webkit-transition: font-size 0.4s, border-color 0.5s;
-  transition: font-size 0.4s, border-color 0.5s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transition: border-color 0.5s;
+  transition: border-color 0.5s;
+}
+.setupContainer .card-header h3 {
+  color: #000000;
+  font-size: 20px;
+  -webkit-transition: font-size 0.4s;
+  transition: font-size 0.4s;
 }
 .setupContainer .card-header:after {
   content: '';
@@ -1032,6 +1048,10 @@ section.sectionReady .button {
   border-bottom: 1px solid;
   -webkit-transform: translateY(-50%) rotate(-45deg);
           transform: translateY(-50%) rotate(-45deg);
+  -webkit-transition: -webkit-transform 0.4s;
+  transition: -webkit-transform 0.4s;
+  transition: transform 0.4s;
+  transition: transform 0.4s, -webkit-transform 0.4s;
   position: absolute;
   margin: 0 0.5em;
   right: 0;
@@ -1173,4 +1193,95 @@ section.sectionReady .button {
   -webkit-transform: translateX(1.6em);
           transform: translateX(1.6em);
   background-color: green;
+}
+.rewardsBlock .card-header .addReward {
+  display: none;
+}
+.active.rewardsBlock .card-header .addReward {
+  display: block;
+}
+.rewardsBlock .rewardList {
+  margin-bottom: 30px;
+}
+.rewardItem {
+  padding: 30px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.rewardItem > div:not(:first-child) {
+  margin-left: 30px;
+}
+.rewardItem .rewardDragger {
+  opacity: 0.5;
+}
+.rewardItem:hover .rewardDragger {
+  opacity: 1;
+}
+.rewardItem .details {
+  line-height: 0.9;
+  font-size: 12px;
+  color: #818181;
+}
+.rewardItem .details span {
+  padding-right: 10px;
+  border-right: 1px solid rgba(0, 0, 0, 0.5);
+}
+.rewardItem .details strong {
+  color: #000;
+  padding-left: 10px;
+  padding-right: 30px;
+}
+.rewardItem .rewardThumb figure {
+  margin: 0;
+  width: 160px;
+  background-size: cover;
+  background-position: center;
+}
+.rewardItem .rewardThumb figure:before {
+  content: '';
+  display: block;
+  padding-bottom: 60%;
+}
+.rewardItem .rewardControls {
+  margin-left: auto !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.rewardItem .rewardControls > *:not(:first-child) {
+  margin-left: 15px;
+}
+.rewardItem .rewardControls a {
+  color: rgba(0, 0, 0, 0.5);
+  display: inline-block;
+  font-size: 35px;
+}
+.rewardItem .rewardControls a i {
+  font-size: inherit;
+}
+.rewardItem .rewardControls a i.icon-undefined {
+  font-size: 0.8em;
+}
+.icon-undefined {
+  width: 1em;
+  height: 0.8em;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  padding: 0.2em 0.3em 0.2em 0;
+  display: inline-block;
+}
+.icon-undefined:before {
+  content: '';
+  display: block;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  padding-bottom: 0.15em;
 }
