--- a/style/setup.less
+++ b/style/setup.less
@@ -190,6 +190,8 @@
 			color: rgba(0, 0, 0, 1);
 			font-size: 20px;
 			transition: font-size 0.4s;
+			margin: 0;
+			line-height: 1;
 		}
 		&:after {
 			content: '';
@@ -423,5 +425,70 @@
 		border-top: 2px solid;
 		border-bottom: 2px solid;
 		padding-bottom: 0.15em;
+	}
+}
+.themesBlock {
+	.card-body {
+		padding: 0;
+	}
+	.popupSetup {
+		> div.row {
+			padding: 30px;
+		}
+		.tab-pane {
+			border-radius: 5px;
+			border: 1px solid #c6c6c6;
+			padding: 40px;
+			h6 {
+				color: #549D90;
+			}
+		}
+	}
+	.nav-pills {
+		display: inline-block;
+		background-color: #F0F0F0;
+		border-radius: 50px;
+		a.nav-link {
+			display: inline-block;
+			font-size: 14px;
+			line-height: 1;
+			color: #4F4F4F;
+			padding: 10px 20px 8px;
+			border-radius: 50px;
+			transition: background-color 0.4s, color 0.4s;
+			&.active {
+				background-color: #333;
+				color: #fff;
+				font-weight: bold;
+			}
+		}
+	}
+}
+.themeSetupTab {
+	background-color: #F0F0F0;
+	padding-top: 5px;
+	position: relative;
+	&:before {
+		pointer-events: none;
+		content: '';
+		background-color: inherit;
+		position: absolute;
+		top: 0;
+		left: -50px;
+		right: -50px;
+		height: 100%;
+	}
+	.nav-tabs {
+		position: relative;
+		z-index: 1;
+		.nav-link {
+			color: #4F4F4F;
+			padding: 15px 25px 10px;
+			&.active {
+				border: none;
+				color: #549D90;
+				font-weight: bold;
+			}
+		}
 	}
 }
