--- a/style/style.css
+++ b/style/style.css
@@ -1039,6 +1039,8 @@ section.sectionReady .button {
   font-size: 20px;
   -webkit-transition: font-size 0.4s;
   transition: font-size 0.4s;
+  margin: 0;
+  line-height: 1;
 }
 .setupContainer .card-header:after {
   content: '';
@@ -1284,4 +1286,66 @@ section.sectionReady .button {
   border-top: 2px solid;
   border-bottom: 2px solid;
   padding-bottom: 0.15em;
+}
+.themesBlock .card-body {
+  padding: 0;
+}
+.themesBlock .popupSetup > div.row {
+  padding: 30px;
+}
+.themesBlock .popupSetup .tab-pane {
+  border-radius: 5px;
+  border: 1px solid #c6c6c6;
+  padding: 40px;
+}
+.themesBlock .popupSetup .tab-pane h6 {
+  color: #549D90;
+}
+.themesBlock .nav-pills {
+  display: inline-block;
+  background-color: #F0F0F0;
+  border-radius: 50px;
+}
+.themesBlock .nav-pills a.nav-link {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 1;
+  color: #4F4F4F;
+  padding: 10px 20px 8px;
+  border-radius: 50px;
+  -webkit-transition: background-color 0.4s, color 0.4s;
+  transition: background-color 0.4s, color 0.4s;
+}
+.themesBlock .nav-pills a.nav-link.active {
+  background-color: #333;
+  color: #fff;
+  font-weight: bold;
+}
+.themeSetupTab {
+  background-color: #F0F0F0;
+  padding-top: 5px;
+  position: relative;
+}
+.themeSetupTab:before {
+  pointer-events: none;
+  content: '';
+  background-color: inherit;
+  position: absolute;
+  top: 0;
+  left: -50px;
+  right: -50px;
+  height: 100%;
+}
+.themeSetupTab .nav-tabs {
+  position: relative;
+  z-index: 1;
+}
+.themeSetupTab .nav-tabs .nav-link {
+  color: #4F4F4F;
+  padding: 15px 25px 10px;
+}
+.themeSetupTab .nav-tabs .nav-link.active {
+  border: none;
+  color: #549D90;
+  font-weight: bold;
 }
