--- a/style/setup.less
+++ b/style/setup.less
@@ -169,7 +169,7 @@
 			.card-header {
 				border-bottom-color: transparent !important;
 				h3 {
-					font-size: 25px;					
+					font-size: 25px;
 				}
 				&:after {
 					transform: translateY(-90%) rotate(45deg);
@@ -220,7 +220,8 @@
 		max-width: 500px;
 		margin: auto;
 		&.disabled {
-			.stepBody, .stepFoot {
+			.stepBody,
+			.stepFoot {
 				pointer-events: none;
 				opacity: 0.5;
 			}
@@ -279,8 +280,8 @@
 	}
 	.recommendFloater {
 		font-size: 12px;
-		color: #1B708E;
-		background-color: #E5EFF5;
+		color: #1b708e;
+		background-color: #e5eff5;
 		padding: 20px;
 		border-radius: 10px;
 		position: absolute;
@@ -290,7 +291,7 @@
 		transform: translate(80%, 10%);
 		i.info {
 			position: absolute;
-			color: #1064FF;
+			color: #1064ff;
 			left: 0;
 			transform: translateX(-50%);
 		}
@@ -414,11 +415,11 @@
 }
 .icon-undefined {
 	width: 1em;
-    height: 0.8em;
-    border-top: 2px solid;
-    border-bottom: 2px solid;
-    padding: 0.2em 0.3em 0.2em 0;
-    display: inline-block;
+	height: 0.8em;
+	border-top: 2px solid;
+	border-bottom: 2px solid;
+	padding: 0.2em 0.3em 0.2em 0;
+	display: inline-block;
 	&:before {
 		content: '';
 		display: block;
@@ -440,19 +441,29 @@
 			border: 1px solid #c6c6c6;
 			padding: 40px;
 			h6 {
-				color: #549D90;
+				color: #549d90;
 			}
+		}
+	}
+	.form-group {
+		color: #4F4F4F;
+		label:not([for]) {
+			font-weight: bold;
+			font-size: 14px;
+		}
+		label[for] {
+			font-size: 14px;
 		}
 	}
 	.nav-pills {
 		display: inline-block;
-		background-color: #F0F0F0;
+		background-color: #f0f0f0;
 		border-radius: 50px;
 		a.nav-link {
 			display: inline-block;
 			font-size: 14px;
 			line-height: 1;
-			color: #4F4F4F;
+			color: #4f4f4f;
 			padding: 10px 20px 8px;
 			border-radius: 50px;
 			transition: background-color 0.4s, color 0.4s;
@@ -463,9 +474,43 @@
 			}
 		}
 	}
+	.widgetSetup {
+		> div.row {
+			padding: 30px;
+		}
+		hr {
+			margin-left: -40px;
+			margin-right: -40px;
+		}
+		h6 {
+			color: #549d90;
+			font-size: 14px;
+		}
+	}
+	.widget-tabs-nav {
+		border-bottom-color: #c6c6c6;
+		.nav-link {
+			background-color: #f0f0f0;
+			border-bottom: 1px solid #c6c6c6;
+			color: #000;
+			font-size: 14px;
+			&.active {
+				border-color: #c6c6c6 #c6c6c6 #fff;
+				background-color: transparent;
+				color: #549d90;
+				font-weight: bold;
+			}
+		}
+	}
+	.widget-tabs-panes {
+		border-radius: 0 0 5px 5px;
+		border: 1px solid #c6c6c6;
+		border-top-width: 0;
+		padding: 40px;
+	}
 }
 .themeSetupTab {
-	background-color: #F0F0F0;
+	background-color: #f0f0f0;
 	padding-top: 5px;
 	position: relative;
 	&:before {
@@ -482,11 +527,11 @@
 		position: relative;
 		z-index: 1;
 		.nav-link {
-			color: #4F4F4F;
+			color: #4f4f4f;
 			padding: 15px 25px 10px;
 			&.active {
 				border: none;
-				color: #549D90;
+				color: #549d90;
 				font-weight: bold;
 			}
 		}
