--- a/style/style.css
+++ b/style/style.css
@@ -1131,8 +1131,8 @@ section.sectionReady .button {
 }
 .setupContainer .recommendFloater {
   font-size: 12px;
-  color: #1B708E;
-  background-color: #E5EFF5;
+  color: #1b708e;
+  background-color: #e5eff5;
   padding: 20px;
   border-radius: 10px;
   position: absolute;
@@ -1144,7 +1144,7 @@ section.sectionReady .button {
 }
 .setupContainer .recommendFloater i.info {
   position: absolute;
-  color: #1064FF;
+  color: #1064ff;
   left: 0;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -1299,18 +1299,28 @@ section.sectionReady .button {
   padding: 40px;
 }
 .themesBlock .popupSetup .tab-pane h6 {
-  color: #549D90;
+  color: #549d90;
+}
+.themesBlock .form-group {
+  color: #4F4F4F;
+}
+.themesBlock .form-group label:not([for]) {
+  font-weight: bold;
+  font-size: 14px;
+}
+.themesBlock .form-group label[for] {
+  font-size: 14px;
 }
 .themesBlock .nav-pills {
   display: inline-block;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   border-radius: 50px;
 }
 .themesBlock .nav-pills a.nav-link {
   display: inline-block;
   font-size: 14px;
   line-height: 1;
-  color: #4F4F4F;
+  color: #4f4f4f;
   padding: 10px 20px 8px;
   border-radius: 50px;
   -webkit-transition: background-color 0.4s, color 0.4s;
@@ -1321,8 +1331,40 @@ section.sectionReady .button {
   color: #fff;
   font-weight: bold;
 }
+.themesBlock .widgetSetup > div.row {
+  padding: 30px;
+}
+.themesBlock .widgetSetup hr {
+  margin-left: -40px;
+  margin-right: -40px;
+}
+.themesBlock .widgetSetup h6 {
+  color: #549d90;
+  font-size: 14px;
+}
+.themesBlock .widget-tabs-nav {
+  border-bottom-color: #c6c6c6;
+}
+.themesBlock .widget-tabs-nav .nav-link {
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #c6c6c6;
+  color: #000;
+  font-size: 14px;
+}
+.themesBlock .widget-tabs-nav .nav-link.active {
+  border-color: #c6c6c6 #c6c6c6 #fff;
+  background-color: transparent;
+  color: #549d90;
+  font-weight: bold;
+}
+.themesBlock .widget-tabs-panes {
+  border-radius: 0 0 5px 5px;
+  border: 1px solid #c6c6c6;
+  border-top-width: 0;
+  padding: 40px;
+}
 .themeSetupTab {
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   padding-top: 5px;
   position: relative;
 }
@@ -1341,11 +1383,11 @@ section.sectionReady .button {
   z-index: 1;
 }
 .themeSetupTab .nav-tabs .nav-link {
-  color: #4F4F4F;
+  color: #4f4f4f;
   padding: 15px 25px 10px;
 }
 .themeSetupTab .nav-tabs .nav-link.active {
   border: none;
-  color: #549D90;
+  color: #549d90;
   font-weight: bold;
 }
