--- a/style/setup.less
+++ b/style/setup.less
@@ -486,6 +486,10 @@
 			color: #549d90;
 			font-size: 14px;
 		}
+		.rangeslider--horizontal {
+			margin-top: 20px;
+			height: 2px;
+		}
 	}
 	.widget-tabs-nav {
 		border-bottom-color: #c6c6c6;
@@ -507,6 +511,32 @@
 		border: 1px solid #c6c6c6;
 		border-top-width: 0;
 		padding: 40px;
+	}
+	.btnAdvancedSettings {
+		display: block;
+		background: #549d90;
+		border-color: #549d90;
+		text-align: left;
+		padding: 0.7rem 1.35rem;
+		margin: 2.5rem 0;
+		position: relative;
+		&:after {
+			content: '+';
+			position: absolute;
+			right: 0;			
+			top: 0;
+			font-size: 1.6em;
+			line-height: 1;
+			margin: 0.7rem 0.8em;
+		}
+		&.collapsed:after {
+			content: '-';
+		}
+		&:active {
+			border-color: #549d90 !important;
+			background: #549d90 !important;
+			
+		}
 	}
 }
 .themeSetupTab {
