--- a/style/setup.less
+++ b/style/setup.less
@@ -22,7 +22,6 @@
 				margin: 1em 0;
 			}
 			a {
-				color: #3bab6b;
 				font-size: 11px;
 				padding: 3px 10px;
 				border-width: 1px;
@@ -262,6 +261,11 @@
 	.stepFoot {
 		padding: 15px;
 	}
+	.asideInfo {
+		color: #999999;
+		font-size: 14px;
+		line-height: 1.3;
+	}
 	.resetSetting {
 		color: #696969;
 		font-size: 12px;
@@ -294,6 +298,58 @@
 			color: #1064ff;
 			left: 0;
 			transform: translateX(-50%);
+		}
+	}
+	.greetingTemplate {
+		background: #fef9f3;
+		margin-left: -50px;
+		margin-right: -50px;
+		border-top: 1px solid #c6c6c6;
+		margin-top: 50px;
+		overflow: hidden;
+		border-radius: 0 0 5px 5px;
+		ul {
+			list-style: none;
+			margin: 20px 0;
+			padding: 0 70px;
+			display: flex;
+			justify-content: space-between;
+			position: relative;
+			&:after,
+			&:before {
+				content: '';
+				width: 15px;
+				height: 15px;
+				border-color: #c6c6c6;
+				border-style: solid;
+				position: absolute;
+				top: 50%;
+			}
+			&:after {
+				right: 35px;
+				border-width: 1px 1px 0 0;
+				transform: translateY(-50%) rotate(45deg);
+			}
+			&:before {
+				left: 35px;
+				border-width: 1px 0 0 1px;
+				transform: translateY(-50%) rotate(-45deg);
+			}
+			li {
+				width: 30%;
+				border: 1px solid #c6c6c6;
+				border-radius: 5px;
+				overflow: hidden;
+				img {
+					width: 100%;
+					vertical-align: middle;
+				}
+			}
+		}
+		p {
+			color: #ba9783;
+			font-size: 13px;
+			text-align: center;
 		}
 	}
 }
@@ -563,6 +619,32 @@
 				border: none;
 				color: #549d90;
 				font-weight: bold;
+			}
+		}
+	}
+}
+.modal-backdrop.show {
+	opacity: 0.75 !important;
+}
+.setupModal {
+	.modal-content {
+		border-radius: 15px;
+	}
+	&#skipModal {
+		.modal-content {
+			padding: 50px;
+			text-align: center;
+		}
+		a[aria-label="Close"] {
+			position: absolute;
+			right: -1em;
+			top: 0.2em;
+			font-size: 2.4em;
+			color: grey;
+			line-height: 0.5;
+			&:hover {
+				text-decoration: none;
+				opacity: 0.8;
 			}
 		}
 	}
