--- a/style/style.css
+++ b/style/style.css
@@ -842,7 +842,6 @@ section.sectionReady .button {
   margin: 1em 0;
 }
 .setupPage header .skipSteps a {
-  color: #3bab6b;
   font-size: 11px;
   padding: 3px 10px;
   border-width: 1px;
@@ -1111,6 +1110,11 @@ section.sectionReady .button {
 .setupContainer .stepFoot {
   padding: 15px;
 }
+.setupContainer .asideInfo {
+  color: #999999;
+  font-size: 14px;
+  line-height: 1.3;
+}
 .setupContainer .resetSetting {
   color: #696969;
   font-size: 12px;
@@ -1148,6 +1152,64 @@ section.sectionReady .button {
   left: 0;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+.setupContainer .greetingTemplate {
+  background: #fef9f3;
+  margin-left: -50px;
+  margin-right: -50px;
+  border-top: 1px solid #c6c6c6;
+  margin-top: 50px;
+  overflow: hidden;
+  border-radius: 0 0 5px 5px;
+}
+.setupContainer .greetingTemplate ul {
+  list-style: none;
+  margin: 20px 0;
+  padding: 0 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+.setupContainer .greetingTemplate ul:after,
+.setupContainer .greetingTemplate ul:before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  border-color: #c6c6c6;
+  border-style: solid;
+  position: absolute;
+  top: 50%;
+}
+.setupContainer .greetingTemplate ul:after {
+  right: 35px;
+  border-width: 1px 1px 0 0;
+  -webkit-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg);
+}
+.setupContainer .greetingTemplate ul:before {
+  left: 35px;
+  border-width: 1px 0 0 1px;
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(-45deg);
+}
+.setupContainer .greetingTemplate ul li {
+  width: 30%;
+  border: 1px solid #c6c6c6;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.setupContainer .greetingTemplate ul li img {
+  width: 100%;
+  vertical-align: middle;
+}
+.setupContainer .greetingTemplate p {
+  color: #ba9783;
+  font-size: 13px;
+  text-align: center;
 }
 .switch {
   font-size: 14px;
@@ -1419,4 +1481,26 @@ section.sectionReady .button {
   border: none;
   color: #549d90;
   font-weight: bold;
+}
+.modal-backdrop.show {
+  opacity: 0.75 !important;
+}
+.setupModal .modal-content {
+  border-radius: 15px;
+}
+.setupModal#skipModal .modal-content {
+  padding: 50px;
+  text-align: center;
+}
+.setupModal#skipModal a[aria-label="Close"] {
+  position: absolute;
+  right: -1em;
+  top: 0.2em;
+  font-size: 2.4em;
+  color: grey;
+  line-height: 0.5;
+}
+.setupModal#skipModal a[aria-label="Close"]:hover {
+  text-decoration: none;
+  opacity: 0.8;
 }
