--- a/style/congrats.less
+++ b/style/congrats.less
@@ -252,7 +252,15 @@
 		width: 100%;
 		left: 0;
 		bottom: 0;
-		text-align: right;
+		.rateContainer {
+			border-radius: 10px 10px 0 0;
+			width: 40%;
+			min-width: 350px;
+			background-color: #FFCA7F;
+			margin-left: auto;
+			text-align: left;
+			padding: 15px 20px;
+		}
 	}
 	&.paused {
 		.summaryPoints li {
