--- a/style/congrats.less
+++ b/style/congrats.less
@@ -7,9 +7,23 @@
 		padding: 15px 30px;
 		border-bottom: 2px solid #d5d5d5;
 		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+		position: relative;
+		z-index: 4;
 	}
 	section {
 		padding: 0 30px;
+		position: relative;
+		overflow-x: hidden;
+		&:after {
+			background: linear-gradient(to bottom, #EAF6F3 0%,rgba(255,255,255,0) 100%);
+			content: '';
+			position: absolute;
+			width: 40%;
+			height: 20%;
+			right: 0;
+			top: 0;
+			transform: skew(-40deg) translateX(40%);
+		}
 		.contentArea {
 			padding-bottom: 100px;
 		}
